fix bug in button overlapping

--- a/src/renderer/scss/_createplaylist.scss
+++ b/src/renderer/scss/_createplaylist.scss
@@ -86,11 +86,11 @@
         /*     color: white; */
         /* } */
         @extend %buttons;
-        position: relative;
     }
 
-    /*button:last-of-type {
-    }*/
+    button:first-of-type {
+        right: 90px;
+    }
 }
 
 %list {
@@ -155,10 +155,6 @@
     i {
         cursor: pointer;
     }
-}
-
-[data-dynamic-style] {
-    background: lightgrey;
 }
 
 [data-saveList="no-saved"] {
